--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6019,7 +6019,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P4p-Jb-wd1">
                                 <rect key="frame" x="13" y="60" width="350" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maz-0b-ski">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oct 2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maz-0b-ski">
                                         <rect key="frame" x="8" y="8" width="250" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="TJD-Tn-5qB"/>
@@ -6038,7 +6038,7 @@
                                         <state key="normal" backgroundImage="BottomArrow.png"/>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="nG2-RZ-5qn" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="top" constant="15" id="3wj-GY-KNc"/>
                                     <constraint firstAttribute="height" constant="50" id="Jgl-O9-bx0"/>
@@ -6078,7 +6078,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2ZK-Vm-4mL">
-                                <rect key="frame" x="12" y="120" width="350" height="547"/>
+                                <rect key="frame" x="13" y="120" width="355" height="547"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="unN-jl-LuC" id="ovC-fZ-tVB"/>
@@ -6090,14 +6090,14 @@
                         <constraints>
                             <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="P4p-Jb-wd1" secondAttribute="trailing" constant="12" id="5bB-h9-jUk"/>
                             <constraint firstItem="2ZK-Vm-4mL" firstAttribute="bottom" secondItem="U7C-Z9-oSi" secondAttribute="bottom" id="amD-fm-UEq"/>
-                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="12" id="dZz-fG-RRj"/>
+                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="dZz-fG-RRj"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="eo7-Fd-BVL"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="trailing" secondItem="U7C-Z9-oSi" secondAttribute="trailing" id="fOs-xb-i3a"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="7" id="k9T-bC-QH0"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="trailing" secondItem="U7C-Z9-oSi" secondAttribute="trailing" id="kme-tB-FlS"/>
                             <constraint firstItem="2ZK-Vm-4mL" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="10" id="oMO-3Q-1Yn"/>
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="rJ1-Kp-Eqn"/>
-                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="2ZK-Vm-4mL" secondAttribute="trailing" constant="13" id="sUS-rz-5va"/>
+                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="2ZK-Vm-4mL" secondAttribute="trailing" constant="7" id="sUS-rz-5va"/>
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="top" secondItem="OdV-gE-XkG" secondAttribute="bottom" constant="10" id="tHD-Zl-iER"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="top" secondItem="U7C-Z9-oSi" secondAttribute="top" id="vD5-sD-fGH"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="vtE-xj-A4Q"/>
@@ -6106,8 +6106,11 @@
                     </view>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
+                        <outlet property="Dateselectedview" destination="P4p-Jb-wd1" id="G2P-YY-baG"/>
                         <outlet property="LeaveHistorytbl" destination="2ZK-Vm-4mL" id="12K-i9-6i7"/>
+                        <outlet property="LeaveHistorytitleLbl" destination="mb4-4z-K2x" id="678-mE-sW1"/>
                         <outlet property="Nodatafoundview" destination="LBp-qg-N3h" id="VGv-1D-2ZZ"/>
+                        <outlet property="SelectedDateLbl" destination="maz-0b-ski" id="EqB-ll-nJa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5rP-73-hBN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
