--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -6085,10 +6085,98 @@
                                     <outlet property="delegate" destination="unN-jl-LuC" id="hQi-lF-0gL"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LG5-Vh-w9h">
+                                <rect key="frame" x="67" y="220" width="240" height="160"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ea8-QB-YhN">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="51"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Leave Rejected Remark's" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Joi-Q4-MiR">
+                                                <rect key="frame" x="0.0" y="10" width="240" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="240" id="Vi1-VJ-nbr"/>
+                                                    <constraint firstAttribute="height" constant="30" id="guK-FU-eRw"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" red="0.054901960780000002" green="0.29803921570000003" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Joi-Q4-MiR" firstAttribute="top" secondItem="ea8-QB-YhN" secondAttribute="top" constant="10" id="1Ll-QJ-zFA"/>
+                                            <constraint firstAttribute="height" constant="51" id="fWS-8i-z2e"/>
+                                            <constraint firstItem="Joi-Q4-MiR" firstAttribute="leading" secondItem="ea8-QB-YhN" secondAttribute="leading" id="mZn-bU-P6w"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mlJ-SU-pQB">
+                                        <rect key="frame" x="0.0" y="52" width="240" height="53"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Invalid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NpZ-Lu-cf7">
+                                                <rect key="frame" x="0.0" y="15" width="240" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="cNE-3D-UuT"/>
+                                                    <constraint firstAttribute="width" constant="240" id="ldl-dK-jup"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="NpZ-Lu-cf7" firstAttribute="leading" secondItem="mlJ-SU-pQB" secondAttribute="leading" id="eSA-vL-rCR"/>
+                                            <constraint firstAttribute="height" constant="53" id="hgv-2c-Pjz"/>
+                                            <constraint firstItem="NpZ-Lu-cf7" firstAttribute="top" secondItem="mlJ-SU-pQB" secondAttribute="top" constant="15" id="jya-VK-Hba"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCt-sP-GoF">
+                                        <rect key="frame" x="0.0" y="106" width="240" height="55"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODa-PR-g1g">
+                                                <rect key="frame" x="20" y="8" width="200" height="40"/>
+                                                <color key="backgroundColor" red="1" green="0.59215686270000001" blue="0.0078431372550000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="grb-p9-j9Y"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <state key="normal" title="CLOSE">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="Closebtn:" destination="unN-jl-LuC" eventType="touchUpInside" id="BIV-i5-plA"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="ODa-PR-g1g" firstAttribute="top" secondItem="NCt-sP-GoF" secondAttribute="top" constant="8" id="3Du-ZP-GIw"/>
+                                            <constraint firstAttribute="trailing" secondItem="ODa-PR-g1g" secondAttribute="trailing" constant="20" id="cn0-R0-X76"/>
+                                            <constraint firstAttribute="height" constant="55" id="gYo-T9-HUt"/>
+                                            <constraint firstItem="ODa-PR-g1g" firstAttribute="leading" secondItem="NCt-sP-GoF" secondAttribute="leading" constant="20" id="k4S-xt-vrj"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="mlJ-SU-pQB" firstAttribute="leading" secondItem="LG5-Vh-w9h" secondAttribute="leading" id="0Qv-WR-d3A"/>
+                                    <constraint firstItem="ea8-QB-YhN" firstAttribute="leading" secondItem="LG5-Vh-w9h" secondAttribute="leading" id="40T-tD-MrO"/>
+                                    <constraint firstAttribute="trailing" secondItem="mlJ-SU-pQB" secondAttribute="trailing" id="5FV-3O-vfI"/>
+                                    <constraint firstItem="ea8-QB-YhN" firstAttribute="top" secondItem="LG5-Vh-w9h" secondAttribute="top" id="BfZ-Uc-bBd"/>
+                                    <constraint firstAttribute="trailing" secondItem="NCt-sP-GoF" secondAttribute="trailing" id="MJp-fw-RIJ"/>
+                                    <constraint firstItem="NCt-sP-GoF" firstAttribute="leading" secondItem="LG5-Vh-w9h" secondAttribute="leading" id="Pzh-Hq-6zk"/>
+                                    <constraint firstItem="NCt-sP-GoF" firstAttribute="top" secondItem="mlJ-SU-pQB" secondAttribute="bottom" constant="1" id="Yeu-N5-dpB"/>
+                                    <constraint firstItem="mlJ-SU-pQB" firstAttribute="top" secondItem="ea8-QB-YhN" secondAttribute="bottom" constant="1" id="fzi-Le-Yxu"/>
+                                    <constraint firstAttribute="trailing" secondItem="ea8-QB-YhN" secondAttribute="trailing" id="xe9-kP-Tt8"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="P4p-Jb-wd1" secondAttribute="trailing" constant="12" id="5bB-h9-jUk"/>
+                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="bottom" secondItem="LG5-Vh-w9h" secondAttribute="bottom" constant="287" id="Jdn-Ik-B5V"/>
+                            <constraint firstItem="LG5-Vh-w9h" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="110" id="JhT-9v-IYN"/>
+                            <constraint firstItem="LG5-Vh-w9h" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="67" id="QmL-h3-XKP"/>
                             <constraint firstItem="2ZK-Vm-4mL" firstAttribute="bottom" secondItem="U7C-Z9-oSi" secondAttribute="bottom" id="amD-fm-UEq"/>
                             <constraint firstItem="2ZK-Vm-4mL" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="dZz-fG-RRj"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="eo7-Fd-BVL"/>
@@ -6099,6 +6187,7 @@
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="rJ1-Kp-Eqn"/>
                             <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="2ZK-Vm-4mL" secondAttribute="trailing" constant="7" id="sUS-rz-5va"/>
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="top" secondItem="OdV-gE-XkG" secondAttribute="bottom" constant="10" id="tHD-Zl-iER"/>
+                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="LG5-Vh-w9h" secondAttribute="trailing" constant="68" id="u4p-Rk-Vx3"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="top" secondItem="U7C-Z9-oSi" secondAttribute="top" id="vD5-sD-fGH"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="vtE-xj-A4Q"/>
                         </constraints>
@@ -6110,6 +6199,7 @@
                         <outlet property="LeaveHistorytbl" destination="2ZK-Vm-4mL" id="12K-i9-6i7"/>
                         <outlet property="LeaveHistorytitleLbl" destination="mb4-4z-K2x" id="678-mE-sW1"/>
                         <outlet property="Nodatafoundview" destination="LBp-qg-N3h" id="VGv-1D-2ZZ"/>
+                        <outlet property="RejectedView" destination="LG5-Vh-w9h" id="ee4-J5-4NM"/>
                         <outlet property="SelectedDateLbl" destination="maz-0b-ski" id="EqB-ll-nJa"/>
                     </connections>
                 </viewController>
