--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3905,6 +3905,7 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="8j4-b2-xzZ"/>
                                                         </constraints>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
@@ -3942,6 +3943,7 @@
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Client Place" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A92-9t-XJ8">
                                                         <rect key="frame" x="6" y="5" width="308" height="40"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
@@ -4004,7 +4006,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="65" id="y4P-aT-VZP"/>
                                                 </constraints>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
@@ -4016,7 +4018,7 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="AbJ-ab-t4x"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -4059,7 +4061,7 @@
                                                             <constraint firstAttribute="width" constant="88" id="hmH-hJ-pKs"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cjw-ab-2gF">
@@ -4256,6 +4258,7 @@
                         <viewLayoutGuide key="safeArea" id="HzQ-89-aCB"/>
                     </view>
                     <connections>
+                        <outlet property="AddresstxtLbl" destination="Kke-74-XX8" id="IzV-Kg-tmx"/>
                         <outlet property="Adresstxtview" destination="9Ef-7V-Dcv" id="4ne-hU-g26"/>
                         <outlet property="Cancelbtn" destination="8ya-AR-Mzo" id="x7g-aa-wp7"/>
                         <outlet property="ClientTxtfld" destination="A92-9t-XJ8" id="cVd-cy-rIb"/>
@@ -4263,11 +4266,15 @@
                         <outlet property="DrpDownview" destination="vRs-Jl-fnW" id="aBn-Du-3cP"/>
                         <outlet property="FieldVisitIn_PopupView" destination="d4e-PT-G0v" id="6Ah-Y3-20O"/>
                         <outlet property="FieldVisitInbtn" destination="KqN-hj-9Xl" id="xfR-80-8AA"/>
+                        <outlet property="FieldVisitLbltxt" destination="Wn5-cM-aYT" id="uoV-yP-4zi"/>
                         <outlet property="FieldVisit_Popupview" destination="dYB-Tk-vGS" id="j05-ZA-Ec5"/>
                         <outlet property="FieldvisitBckview" destination="IKi-KG-WXg" id="A7d-fM-72o"/>
                         <outlet property="Fieldvisitoutbtn" destination="VMs-aT-W6I" id="6BU-H3-0RP"/>
                         <outlet property="FldvisitFormView" destination="cdP-2e-TnE" id="g6w-wX-5QG"/>
+                        <outlet property="PlaceClintNametxtLbl" destination="upk-39-zIv" id="rgu-y7-wMe"/>
+                        <outlet property="PlacestxtLbl" destination="xCZ-St-4OB" id="MBb-WJ-y8W"/>
                         <outlet property="PreviousMeetingView" destination="OaT-TW-lRf" id="Nn5-nd-UxM"/>
+                        <outlet property="PreviousMeetingtxtLbl" destination="C1y-Zo-6Js" id="Tkt-dy-T2S"/>
                         <outlet property="PreviousTxt" destination="paP-fN-Ms7" id="MRn-vb-9pg"/>
                         <outlet property="SelectPlaceDrptble" destination="cjw-ab-2gF" id="3hl-Rr-qZg"/>
                         <outlet property="SelectPlaceViewconstriant" destination="yZE-s8-4NP" id="FPf-bY-87T"/>
@@ -4275,6 +4282,7 @@
                         <outlet property="Selectplacelbl" destination="NoD-2f-GUq" id="SFG-Yy-d0D"/>
                         <outlet property="Submitbrn" destination="GY1-1e-Xnx" id="3az-vp-YNR"/>
                         <outlet property="VisitPuposetxtfld" destination="Yig-CM-KpB" id="l9f-z8-Hci"/>
+                        <outlet property="VisitPurposetxtLbl" destination="GMf-CW-pVP" id="Zg6-nT-DDx"/>
                         <outlet property="mapView" destination="8lq-0n-iyX" id="pLb-W2-0aO"/>
                     </connections>
                 </viewController>
