--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -5894,6 +5894,12 @@
                                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Sv-Bh-3bq">
+                                                <rect key="frame" x="207" y="8" width="97" height="34"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -5975,6 +5981,7 @@
                         <outlet property="DateSelectionBtn" destination="2Qx-6E-zVF" id="mVE-Vx-7A6"/>
                         <outlet property="Datetxtfle" destination="Dzd-6i-h59" id="uti-DN-lFq"/>
                         <outlet property="Dateview" destination="rYF-tk-c9l" id="sRn-W4-D6n"/>
+                        <outlet property="Dummytxtfld" destination="7Sv-Bh-3bq" id="U6I-qm-Mkn"/>
                         <outlet property="FieldvisitDetailsLbl" destination="qiS-hd-snU" id="yrx-Zu-Vbb"/>
                         <outlet property="MyTeamGooglemapFormview" destination="LFm-OC-vj8" id="x57-MN-u6i"/>
                         <outlet property="MyteamGooglemapFormtbl" destination="qZA-uD-JQz" id="GKO-H4-zoX"/>
